# animal_factory

./: CMakeLists.txt  README.md
python/: test.py
python/animal_factory/: __init__.py  cat.py  siouxsie.py
python/tests/: test_factory.py
src/: CMakeLists.txt  animal.h  animal_factory.cpp  animal_factory.h  balto.h  cage.h  main.cpp  test.py
